# dp-dv-example

./: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
macros/: db_ds_tbl_id_generator.sql  db_ds_tbl_id_generator.yml
models/: schema.yml
models/staging/raw_stage/: raw_inventory.sql  raw_orders.sql  raw_transactions.sql
models/staging/stage/: v_stg_inventory.sql  v_stg_orders.sql  v_stg_transactions.sql
