[tool.poetry]
name = "dp-dv-example"
version = "0.1.0"
description = "datavault example Data Product"
authors = ["Nawfel Bacha <nawfel@astrafy.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
dbt-core = "1.8.0"
dbt-bigquery= "1.8.0"
google-cloud-storage="2.17.0"
google-cloud-core = "2.4.1"
sqlfluff-templater-dbt="3.0.7"
diff-cover="9.1.0"
pytest="8.2.2"
pytz = "^2024.1"
elementary-data="0.15.1"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core==1.2.2"]
build-backend = "poetry.core.masonry.api"
